<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/fish"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/fish" />
        <item
            android:id="@+id/corm"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/corm" />
        <item
            android:id="@+id/tools"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/tools" />
    </group>
    <item android:title="Разное">
        <menu>
            <item
                android:id="@+id/fisher_story"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/story"/>
            <item
                android:id="@+id/advice"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/advice"/>
        </menu>
    </item>
</menu>